--- a/client/package.json
+++ b/client/package.json
@@ -4,45 +4,46 @@
     "private": true,
     "proxy": "http://localhost:5555",
     "dependencies": {
-      "@testing-library/jest-dom": "^5.17.0",
-      "@testing-library/react": "^13.4.0",
-      "@testing-library/user-event": "^13.5.0",
-      "formik": "^2.4.5",
-      "jest": "^27.5.1",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-icons": "^5.0.1",
-      "react-router-dom": "^5.2.0",
-      "react-scripts": "5.0.1",
-      "styled-components": "^6.1.8",
-      "web-vitals": "^2.1.4",
-      "yup": "^1.3.3"
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "formik": "^2.4.5",
+        "jest": "^27.5.1",
+        "mapbox-gl": "^3.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^5.0.1",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "5.0.1",
+        "styled-components": "^6.1.8",
+        "web-vitals": "^2.1.4",
+        "yup": "^1.3.3"
     },
     "devDependencies": {
-      "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
     },
     "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     },
     "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
-  }
+}
