--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "proxy": "http://127.0.0.1:5555",
     "dependencies": {
+        "@emailjs/browser": "^4.3.3",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
